--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
           rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
           rgba(0, 0, 0, 0.07) 0px 32px 64px;
       }
+
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      #particles-js {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+
       @media screen and (max-width: 1000px) {
         #myBtn {
           right: 10px;
@@ -77,6 +90,8 @@
   </head>
 
   <body>
+    <div id="particles-js"></div>
+
     <button
       class="rounded-circle"
       onclick="topFunction()"
@@ -847,4 +862,7 @@
       document.documentElement.scrollTop = 0;
     }
   </script>
+
+  <script src="script/particles.js"></script>
+  <script src="script/app.js"></script>
 </html>
