Added new files

--- a/index.html
+++ b/index.html
@@ -467,35 +467,39 @@
             <hr />
             <div class="Tech_Stack-body">
               <div data-aos="fade-up">
-                <i title="JavaScript" class="fa-brands fa-js"></i>
+                <i
+                  title="JavaScript"
+                  class="fa-brands fa-js"
+                  style="color: #f0db4f"
+                ></i>
                 <p>JavaScript</p>
               </div>
               <div data-aos="fade-down">
-                <i class="fa-brands fa-php"></i>
+                <i class="fa-brands fa-php" style="color: #aeb2d5"></i>
                 <p>PHP</p>
               </div>
               <div data-aos="fade-down">
-                <i class="fa-brands fa-bootstrap"></i>
+                <i class="fa-brands fa-bootstrap" style="color: #59287a"></i>
                 <p>Bootstrap</p>
               </div>
               <div data-aos="fade-up">
-                <i class="fa-brands fa-sass"></i>
+                <i class="fa-brands fa-sass" style="color: #cc6699"></i>
                 <p>Sass</p>
               </div>
               <div data-aos="fade-up">
-                <i class="fa-brands fa-react"></i>
+                <i class="fa-brands fa-react" style="color: #61dbfb"></i>
                 <p>React Js</p>
               </div>
               <div data-aos="fade-down">
-                <i class="fa-brands fa-laravel"></i>
+                <i class="fa-brands fa-laravel" style="color: #f05340"></i>
                 <p>Laravel</p>
               </div>
               <div data-aos="fade-up">
-                <i class="fa-brands fa-node"></i>
+                <i class="fa-brands fa-node" style="color: #3c873a"></i>
                 <p>Node</p>
               </div>
               <div data-aos="fade-dwon">
-                <i class="fa-brands fa-git-alt"></i>
+                <i class="fa-brands fa-git-alt" style="color: #f1502f"></i>
                 <p>Git</p>
               </div>
             </div>
