--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 
     <section class="projects" id="projects">
       <div class="container-fluid text-center">
-        <div class="container">
+        <div class="container mb-5">
           <h1>Latest <span>Projects</span></h1>
 
           <div class="row">
