--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <style>
       body,
       .modal-content {
+        background-color: #fff !important;
         background-size: cover;
         background-attachment: fixed;
         background-position: center;
@@ -412,7 +413,7 @@
           <ul class="navbar-nav ml-auto">
             <li>
               <a
-                class="nav-link resume"
+                class="btn-block resume"
                 href="assets/Jeferson Borras Resume.pdf"
                 download="Resume.pdf"
                 target="_blank"
@@ -624,7 +625,7 @@
 
     <section class="projects" id="projects">
       <div class="container-fluid text-center">
-        <div class="container mb-5">
+        <div class="container">
           <h1>Latest <span>Projects</span></h1>
 
           <div class="row">
