Added new files

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
     <style>
       body,
       .modal-content {
-        background-color: #fff !important;
+        background-color: white !important;
         background-size: cover;
         background-attachment: fixed;
         background-position: center;
+      }
+      .modal {
+        font-weight: 600 !important;
       }
       .modal .btn {
         background-color: #00adb5 !important;
@@ -497,7 +500,7 @@
               </div>
               <div data-aos="fade-up">
                 <i class="fa-brands fa-node" style="color: #3c873a"></i>
-                <p>Node</p>
+                <p>Node Js</p>
               </div>
               <div data-aos="fade-dwon">
                 <i class="fa-brands fa-git-alt" style="color: #f1502f"></i>
