--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
           </div>
 
           <div class="Tech_Stack text-center" data-aos="flip-left">
-            <h2 class="line">Tech Stack</h2>
+            <h2 class="text-uppercase">Tech Stack</h2>
             <hr />
             <div class="Tech_Stack-body">
               <div data-aos="fade-up">
@@ -506,6 +506,13 @@
                 <i class="fa-brands fa-git-alt" style="color: #f1502f"></i>
                 <p>Git</p>
               </div>
+              <p data-aos="zoom-out">
+                I use a powerful and diversified tech stack to create new
+                solutions that propel your company ahead. I ensure that your
+                project is constructed on a solid basis and remains scalable,
+                efficient, and safe by having a deep understanding of the newest
+                technologies and frameworks.
+              </p>
             </div>
           </div>
         </div>
@@ -513,12 +520,22 @@
     </section>
 
     <section class="about" id="about">
-      <div class="container-fluid" data-aos="fade-right">
+      <div class="container-fluid">
         <div class="container">
           <div class="row align-items-center align-content-center">
-            <div class="col-md-5"><img src="assets/ID_PIC.jpg" alt="" /></div>
+            <div
+              class="col-md-5"
+              data-aos="fade-right"
+              data-aos-duration="1000"
+            >
+              <img src="assets/ID_PIC.jpg" alt="" />
+            </div>
 
-            <div class="col-md-7">
+            <div
+              class="col-md-7"
+              data-aos="flip-right"
+              data-aos-duration="1000"
+            >
               <h1>About <span>Me</span></h1>
               <h4>Software Developer</h4>
               <p>
@@ -632,7 +649,11 @@
           <h1>Latest <span>Projects</span></h1>
 
           <div class="row">
-            <div class="col-md-6" data-aos="fade-right">
+            <div
+              class="col-md-6"
+              data-aos="fade-right"
+              data-aos-duration="1000"
+            >
               <div class="box">
                 <img src="assets/queueing_system_project.png" alt="" />
                 <div class="box-body p-3">
@@ -645,7 +666,7 @@
               </div>
             </div>
 
-            <div class="col-md-6" data-aos="fade-down">
+            <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
               <div class="box">
                 <img src="assets/PST project.png" alt="" />
                 <div class="box-body p-3">
@@ -670,14 +691,24 @@
     <section class="contact" id="contact">
       <div class="container-fluid">
         <div class="container text-center">
-          <div class="contact-header">
+          <div
+            class="contact-header"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+          >
             <h1>Contact <span>Me</span></h1>
+            <p>
+              Let's connect and collaborate! If you have any questions,
+              opportunities, or simply want to say hello, feel free to reach out
+              using the contact form below. I'm always excited to hear about new
+              projects and ideas.
+            </p>
           </div>
-
           <form
             class="text-left"
             onsubmit="sendEmail(); reset(); return false;"
-            data-aos="flip-left"
+            data-aos="flip-down"
+            data-aos-duration="1000"
           >
             <div class="row">
               <div class="col-md-4">
@@ -708,7 +739,7 @@
               <div class="col-md-12">
                 <div class="form-group">
                   <textarea
-                    placeholder="&#xf27a;  Message..."
+                    placeholder="&#xf27a;  Write Here your message..."
                     class=""
                     name=""
                     id=""
