Added new files

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
     <section class="works" id="works">
       <div class="container-fluid">
         <div class="container text-center">
-          <div class="works-header" data-aos="fade-up">
+          <div class="works-header" data-aos="fade-up" data-aos-duration="1000">
             <h1>Services</h1>
             <p>
               Jeferson Andaya Borras offers a range of services that cater to
@@ -575,7 +575,7 @@
           </div>
 
           <div class="row">
-            <div class="col-md-4" data-aos="fade-down">
+            <div class="col-md-4" data-aos="fade-down" data-aos-duration="1000">
               <div class="card">
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Development</h2>
@@ -596,7 +596,7 @@
                 </button>
               </div>
             </div>
-            <div class="col-md-4" data-aos="fade-up">
+            <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000">
               <div class="card">
                 <i class="fa-solid fa-pen-fancy"></i>
                 <h2>Graphic Design</h2>
@@ -617,7 +617,7 @@
                 </button>
               </div>
             </div>
-            <div class="col-md-4" data-aos="fade-down">
+            <div class="col-md-4" data-aos="fade-down" data-aos-duration="1000">
               <div class="card">
                 <i class="fa-solid fa-chart-simple"></i>
                 <h2>Digital Marketing</h2>
