added new files

--- a/index.html
+++ b/index.html
@@ -503,11 +503,11 @@
           <div
             class="row flex-row-reverse align-items-center align-content-center"
           >
-            <div class="col-md-5">
+            <div class="col-md-5" data-aos="flip-right">
               <img src="assets/2x2.png" alt="" />
             </div>
 
-            <div class="col-md-7">
+            <div class="col-md-7" data-aos="fade-up">
               <h1>Hello, It's Me 👋</h1>
               <h1 class="display-5">Jeferson Borras</h1>
               <h1>I am <span class="auto-type"></span></h1>
@@ -602,7 +602,7 @@
             <div
               class="col-md-7"
               data-aos="flip-right"
-              data-aos-duration="1000"
+              data-aos-duration="2000"
             >
               <h1>About <span>Me</span></h1>
               <h4>Software Developer</h4>
@@ -717,11 +717,7 @@
           <h1>Latest <span>Projects</span></h1>
 
           <div class="row">
-            <div
-              class="col-md-6"
-              data-aos="fade-right"
-              data-aos-duration="1000"
-            >
+            <div class="col-md-6" data-aos="flip-left" data-aos-duration="2000">
               <div class="box">
                 <img src="assets/queueing system.png" alt="" />
                 <div class="box-body p-3">
@@ -734,7 +730,11 @@
               </div>
             </div>
 
-            <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
+            <div
+              class="col-md-6"
+              data-aos="flip-right"
+              data-aos-duration="2000"
+            >
               <div class="box">
                 <img src="assets/PST project.png" alt="" />
                 <div class="box-body p-3">
@@ -775,7 +775,7 @@
           <form
             class="text-left"
             onsubmit="sendEmail(); reset(); return false;"
-            data-aos="flip-down"
+            data-aos="zoom-in"
             data-aos-duration="1000"
           >
             <div class="row">
