added new files

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav ml-auto navbar-nav-1">
             <li class="nav-item">
               <a class="nav-link" href="#home">Home</a>
             </li>
@@ -481,7 +481,7 @@
             </li>
           </ul>
 
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav ml-auto navbar-nav-2">
             <li>
               <a
                 class="btn-block resume"
@@ -503,15 +503,29 @@
           <div
             class="row flex-row-reverse align-items-center align-content-center"
           >
-            <div class="col-md-5" data-aos="flip-right">
+            <div
+              class="col-md-5"
+              data-aos="flip-right"
+              data-aos-duration="1000"
+            >
               <img src="assets/2x2.png" alt="" />
             </div>
 
-            <div class="col-md-7" data-aos="fade-up">
-              <h1>Hello, It's Me 👋</h1>
-              <h1 class="display-5">Jeferson Borras</h1>
-              <h1>I am <span class="auto-type"></span></h1>
-              <p>
+            <div class="col-md-7">
+              <h1 data-aos="fade-right" data-aos-duration="1000">
+                Hello, It's Me 👋
+              </h1>
+              <h1
+                data-aos="fade-right"
+                data-aos-duration="2000"
+                class="display-5"
+              >
+                Jeferson Borras
+              </h1>
+              <h1 data-aos="fade-right" data-aos-duration="1000">
+                I am <span class="auto-type"></span>
+              </h1>
+              <p data-aos="fade-up" data-aos-duration="2000">
                 My career goal as an full stack developer/designer and investor
                 is to use my technical knowledge, creativity, and business savvy
                 to develop novel solutions, accelerate digital transformation,
@@ -519,6 +533,8 @@
               </p>
 
               <a
+                data-aos="fade-left"
+                data-aos-duration="1000"
                 class="fb btn"
                 href="https://www.facebook.com/Jborras910"
                 target="_blank"
@@ -526,6 +542,8 @@
               >
 
               <a
+                data-aos="fade-right"
+                data-aos-duration="1000"
                 class="Linkedin btn"
                 href="https://www.linkedin.com/in/jeferson-borras-818a661b0/"
                 target="_blank"
@@ -534,11 +552,17 @@
             </div>
           </div>
 
-          <div class="Tech_Stack text-center" data-aos="flip-left">
-            <h2 class="text-uppercase">Tech Stack</h2>
-            <hr />
+          <div class="Tech_Stack text-center">
+            <h2
+              class="text-uppercase"
+              data-aos="zoom-in"
+              data-aos-duration="1000"
+            >
+              Tech <span>Stack</span>
+            </h2>
+
             <div class="Tech_Stack-body">
-              <div data-aos="fade-up">
+              <div data-aos="fade-down" data-aos-duration="1000">
                 <i
                   title="JavaScript"
                   class="fa-brands fa-js"
@@ -546,35 +570,35 @@
                 ></i>
                 <p>JavaScript</p>
               </div>
-              <div data-aos="fade-down">
+              <div data-aos="fade-up" data-aos-duration="1000">
                 <i class="fa-brands fa-php" style="color: #aeb2d5"></i>
                 <p>PHP</p>
               </div>
-              <div data-aos="fade-down">
+              <div data-aos="fade-down" data-aos-duration="1000">
                 <i class="fa-brands fa-bootstrap" style="color: #59287a"></i>
                 <p>Bootstrap</p>
               </div>
-              <div data-aos="fade-up">
+              <div data-aos="fade-up" data-aos-duration="1000">
                 <i class="fa-brands fa-sass" style="color: #cc6699"></i>
                 <p>Sass</p>
               </div>
-              <div data-aos="fade-up">
+              <div data-aos="fade-down" data-aos-duration="1000">
                 <i class="fa-brands fa-react" style="color: #61dbfb"></i>
                 <p>React Js</p>
               </div>
-              <div data-aos="fade-down">
+              <div data-aos="fade-up" data-aos-duration="1000">
                 <i class="fa-brands fa-laravel" style="color: #f05340"></i>
                 <p>Laravel</p>
               </div>
-              <div data-aos="fade-up">
+              <div data-aos="fade-down" data-aos-duration="1000">
                 <i class="fa-brands fa-node" style="color: #3c873a"></i>
                 <p>Node Js</p>
               </div>
-              <div data-aos="fade-dwon">
+              <div data-aos="fade-up" data-aos-duration="1000">
                 <i class="fa-brands fa-git-alt" style="color: #f1502f"></i>
                 <p>Git</p>
               </div>
-              <p data-aos="zoom-out">
+              <p data-aos="zoom-out" data-aos-duration="1000">
                 I use a powerful and diversified tech stack to create new
                 solutions that propel your company ahead. I ensure that your
                 project is constructed on a solid basis and remains scalable,
@@ -714,10 +738,12 @@
     <section class="projects" id="projects">
       <div class="container-fluid text-center">
         <div class="container">
-          <h1>Latest <span>Projects</span></h1>
+          <h1 data-aos-duration="1000" data-aos="zoom-in-down">
+            Latest <span>Projects</span>
+          </h1>
 
           <div class="row">
-            <div class="col-md-6" data-aos="flip-left" data-aos-duration="2000">
+            <div class="col-md-6" data-aos="flip-left" data-aos-duration="3000">
               <div class="box">
                 <img src="assets/queueing system.png" alt="" />
                 <div class="box-body p-3">
@@ -733,7 +759,7 @@
             <div
               class="col-md-6"
               data-aos="flip-right"
-              data-aos-duration="2000"
+              data-aos-duration="3000"
             >
               <div class="box">
                 <img src="assets/PST project.png" alt="" />
